Added experiments with vector store and similarity search.

--- a/experiments/inference_api/pyproject.toml
+++ b/experiments/inference_api/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "latent-assets"
+name = "inference-api"
 version = "0.1.0"
-description = "Images, embeddings and search."
+description = "Inference API"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
